Opravené TSP a benchmark